--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 
 aux_source_directory(. SRC_LISTS)
 aux_source_directory(utils SRC_LISTS)
+aux_source_directory(box SRC_LISTS)
 aux_source_directory(parser SRC_LISTS)
+
 
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Lib)
 
