--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 aux_source_directory(. SRC_LISTS)
 aux_source_directory(utils SRC_LISTS)
 aux_source_directory(box SRC_LISTS)
+aux_source_directory(box/moov/ SRC_LISTS)
 aux_source_directory(parser SRC_LISTS)
 
 
